Adjusting changelogs prior to release of kratka v0.0.2

--- a/kratka_bevy/Cargo.toml
+++ b/kratka_bevy/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.14.1", default-features = false }
-kratka = { version = "0.0.1-alpha.1", path = "../kratka" }
+kratka = { version = "^0.0.2", path = "../kratka" }
