--- a/kratka/Cargo.toml
+++ b/kratka/Cargo.toml
@@ -3,6 +3,6 @@ name = "kratka"
 description = "Grid essentials to build upon for the Bevy engine (DRAFT)"
 edition = "2021"
 license-file = "../LICENSE"
-version = "0.0.1-alpha.1"
+version = "0.0.2"
 
 [dependencies]
