--- a/kratka_ldtk/Cargo.toml
+++ b/kratka_ldtk/Cargo.toml
@@ -2,6 +2,7 @@
 name = "kratka_ldtk"
 description = "LDTK importing for kratka"
 version = "0.0.1-alpha.1"
+license-file = "../LICENSE"
 edition = "2021"
 
 [dependencies]
